@@ -18,6 +18,11 @@
 package org.apache.solr.search;
 
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+
+import org.apache.lucene.util.Accountable;
+import org.apache.lucene.util.RamUsageEstimator;
 
 /**
  * <code>DocSlice</code> implements DocList as an array of docids and optional scores.
@@ -26,6 +31,8 @@ import java.util.Arrays;
  * @since solr 0.9
  */
 public class DocSlice extends DocSetBase implements DocList {
+  private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(DocSlice.class);
+
   final int offset;    // starting position of the docs (zero based)
   final int len;       // number of positions used in arrays
   final int[] docs;    // a slice of documents (docs 0-100 of the query)
@@ -33,6 +40,8 @@ public class DocSlice extends DocSetBase implements DocList {
   final float[] scores;  // optional score list
   final int matches;
   final float maxScore;
+
+  final long ramBytesUsed;
 
   /**
    * Primary constructor for a DocSlice instance.
@@ -50,6 +59,7 @@ public class DocSlice extends DocSetBase implements DocList {
     this.scores=scores;
     this.matches=matches;
     this.maxScore=maxScore;
+    this.ramBytesUsed = BASE_RAM_BYTES_USED + RamUsageEstimator.sizeOf(docs) + RamUsageEstimator.sizeOf(scores);
   }
 
   @Override
@@ -83,14 +93,6 @@ public class DocSlice extends DocSetBase implements DocList {
   public int size()    { return len; }
   @Override
   public int matches() { return matches; }
-
-
-  @Override
-  public long memSize() {
-    return (docs.length<<2)
-            + (scores==null ? 0 : (scores.length<<2))
-            + 24;
-  }
 
 
   @Override
@@ -174,5 +176,15 @@ public class DocSlice extends DocSetBase implements DocList {
       DocSlice slice = (DocSlice) super.clone();
     } catch (CloneNotSupportedException e) {}
     return null;
+  }
+
+  @Override
+  public long ramBytesUsed() {
+    return ramBytesUsed;
+  }
+
+  @Override
+  public Collection<Accountable> getChildResources() {
+    return Collections.emptyList();
   }
 }
