@@ -17,7 +17,12 @@
 
 package org.apache.solr.search;
 
+import java.util.Collection;
+import java.util.Collections;
+
+import org.apache.lucene.util.Accountable;
 import org.apache.lucene.util.BitUtil;
+import org.apache.lucene.util.RamUsageEstimator;
 
 
 /**
@@ -30,6 +35,8 @@ import org.apache.lucene.util.BitUtil;
  * @since solr 0.9
  */
 public final class HashDocSet extends DocSetBase {
+  private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(HashDocSet.class);
+
   /** Default load factor to use for HashDocSets.  We keep track of the inverse
    *  since multiplication is so much faster than division.  The default
    *  is 1.0f / 0.75f
@@ -48,10 +55,13 @@ public final class HashDocSet extends DocSetBase {
 
   private final int mask;
 
+  private final long ramBytesUsed;
+
   public HashDocSet(HashDocSet set) {
     this.table = set.table.clone();
     this.size = set.size;
     this.mask = set.mask;
+    this.ramBytesUsed = BASE_RAM_BYTES_USED + RamUsageEstimator.sizeOf(table);
   }
 
   /** Create a HashDocSet from a list of *unique* ids */
@@ -79,6 +89,8 @@ public final class HashDocSet extends DocSetBase {
     }
 
     size = len;
+
+    ramBytesUsed = BASE_RAM_BYTES_USED + RamUsageEstimator.sizeOf(table);
   }
 
   void put(int doc) {
@@ -153,11 +165,6 @@ public final class HashDocSet extends DocSetBase {
         return 0.0f;
       }
     };
-  }
-
-  @Override
-  public long memSize() {
-    return (table.length<<2) + 20;
   }
 
   @Override
@@ -296,4 +303,15 @@ public final class HashDocSet extends DocSetBase {
 
   // don't implement andNotSize() and unionSize() on purpose... they are implemented
   // in BaseDocSet in terms of intersectionSize().
+
+
+  @Override
+  public long ramBytesUsed() {
+    return ramBytesUsed;
+  }
+
+  @Override
+  public Collection<Accountable> getChildResources() {
+    return Collections.emptyList();
+  }
 }
